feat: add venue map link and refresh button for Tic Tac Toe game; update booth appearance display logic

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -702,13 +702,20 @@
                     >下載 Download</a
                   >
                 </td>
-              </tr>
-              <tr style="display: none" id="media-section-row6">
-                <td style="border-top: none">
-                  <span class="label">攤位地圖 Booth Map</span><br />
-                  <img src="image/map-lol.png" style="width: 100%" />
+                <td style="border-top: none; width: 55vw">
+                  <span class="label">展場地圖 Venue Map</span><br />
+                  <a href="https://your-shopline-link.com" target="_blank"
+                    >在主網站查看</a
+                  >
                 </td>
               </tr>
+              <tr style="display: none" id="media-section-row6">
+                <td style="border-top: none; width: 55vw">
+                  <span class="label">攤位外觀 Booth Appearance</span><br />
+                  10月公布
+                </td>
+              </tr>
+
               <tr>
                 <td style="border-top: none; border-right: 1px solid black">
                   <span class="label">徵件流程表 Open Call Schedule</span><br />
