feat: update input validation pattern for application forms; allow a wider range of characters

--- a/dashboard-contact.html
+++ b/dashboard-contact.html
@@ -141,6 +141,8 @@
                       ></span
                     >
                   </div>
+                  <!-- 我484故意寫個圈圈叉叉在這裡讓你忘記你為什麼要聯絡窗口? 嗯對，是。
+                   Do i purposely write an XOXO here to distract you from your original purpose? yish:P -->
                   <div id="tictactoe-container">
                     <div
                       id="tictactoe-board"
