--- a/localapplication.html
+++ b/localapplication.html
@@ -127,7 +127,7 @@
             placeholder="品牌名稱"
             maxlength="150"
             required
-            pattern="^[\u4e00-\u9fa5a-zA-Z0-9\s]+$"
+            pattern="^[\p{L}\p{N}\s]+$"
             title="請勿輸入特殊符號"
           />
         </div>
