--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -127,7 +127,7 @@
             placeholder="Exhibitor's Name"
             maxlength="150"
             required
-            pattern="^[\u4e00-\u9fa5a-zA-Z0-9\s]+$"
+            pattern="^[\p{L}\p{N}\s]+$"
             title="Please do not enter special characters."
           />
         </div>
