feat: update iframe source URL for shop; redirect to the correct storefront

--- a/iframe-text.html
+++ b/iframe-text.html
@@ -1,5 +1,1 @@
-<iframe
-  src="https://nomorehighwords.shoplineapp.com/"
-  width="100%"
-  height="600"
-></iframe>
+<iframe src="shop.taipeiartbookfair.com" width="100%" height="600"></iframe>
