feat: add edit profile functionality and update button IDs in dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -32,6 +32,7 @@
     </script>
     <script src="js/cookie.js"></script>
     <script src="js/dashboard-basic.js"></script>
+    <script src="js/edit-profile.js"></script>
   </head>
   <body>
     <div id="loading-mask">
@@ -968,7 +969,11 @@
               </p>
 
               <div style="margin-top: 1rem">
-                <button type="submit" style="padding: 0.7rem 2rem">
+                <button
+                  type="submit"
+                  id="submit-edit-brand"
+                  style="padding: 0.7rem 2rem"
+                >
                   送出 Submit
                 </button>
               </div>
@@ -1411,7 +1416,11 @@
               </p>
 
               <div style="margin-top: 1rem">
-                <button type="submit" style="padding: 0.7rem 2rem">
+                <button
+                  type="submit"
+                  id="submit-edit-account"
+                  style="padding: 0.7rem 2rem"
+                >
                   送出 Submit
                 </button>
               </div>
