fix: update baselocation handling in dashboard and edit profile

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -949,18 +949,6 @@
                     </select>
                   </td>
                 </tr>
-                <tr>
-                  <td colspan="2">
-                    <span class="label">主要創作地點 Based at</span><br />
-                    <input
-                      type="text"
-                      name="baselocation"
-                      value="主要創作地點"
-                      style="width: 95%"
-                      id="baselocation-edit"
-                    />
-                  </td>
-                </tr>
               </table>
 
               <p style="margin-top: 2rem; color: darkgray">
@@ -1043,9 +1031,15 @@
                 </td>
               </tr>
               <tr>
-                <td colspan="2">
+                <td>
                   <span class="label">國籍 Nationality</span><br /><span
                     id="nationality2"
+                    >🚧 讀取中…</span
+                  >
+                </td>
+                <td>
+                  <span class="label">主要創作據點 Based at</span><br /><span
+                    id="baselocation"
                     >🚧 讀取中…</span
                   >
                 </td>
@@ -1362,6 +1356,17 @@
                       <option value="ZM">Zambia (ZM)</option>
                       <option value="ZW">Zimbabwe (ZW)</option>
                     </select>
+                  </td>
+
+                  <td colspan="2">
+                    <span class="label">主要創作據點 Based at</span><br />
+                    <input
+                      type="text"
+                      name="baselocation"
+                      value="主要創作地點"
+                      style="width: 95%"
+                      id="baselocation-edit"
+                    />
                   </td>
                 </tr>
                 <tr>
