feat: update input pattern to allow additional special characters in brand name and exhibitor's name fields

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -121,15 +121,10 @@
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">Required Question</span>
-          <input
-            class="form-input"
-            name="entry.1159390039"
-            placeholder="Exhibitor's Name"
-            maxlength="150"
-            required
-            pattern="^[\p{L}\p{N}\s]+$"
-            title="Please do not enter special characters."
-          />
+          <input class="form-input" name="entry.1159390039"
+          placeholder="Exhibitor's Name" maxlength="150" required
+          pattern="^[\p{L}\p{N}\s!\"#$%&'()*+,\-./:;<=>?@[\\\]^_`{|}~]+$"
+          title="Please do not enter special characters." />
         </div>
       </div>
 
