--- a/localapplication.html
+++ b/localapplication.html
@@ -121,15 +121,10 @@
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">必填問題</span>
-          <input
-            class="form-input"
-            name="entry.1159390039"
-            placeholder="品牌名稱"
-            maxlength="150"
-            required
-            pattern="^[\p{L}\p{N}\s]+$"
-            title="請勿輸入特殊符號"
-          />
+          <input class="form-input" name="entry.1159390039"
+          placeholder="品牌名稱" maxlength="150" required
+          pattern="^[\p{L}\p{N}\s!\"#$%&'()*+,\-./:;<=>?@[\\\]^_`{|}~]+$"
+          title="請勿輸入特殊符號" />
         </div>
       </div>
 
