THE APPLICATION IS CLOSE! DO NOT PR UNLESS THE TIME HAS COME!!

--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@ font in use: Poppins, PicNic, and Inclusive Sans
             <br />
             <h3>申請時程</h3>
             <p>
-              申請截止：6月15日（日）24:00<br />
+              <span class="deadline-highlight"
+                >申請截止：6月15日（日）24:00<br
+              /></span>
               審核通知：6月30日（一）12:00<br />
               &nbsp;&nbsp;&nbsp; &bull; 通過者須於 7月13日（日）24:00前付款<br />
               備取名單通知：7月16日（三）24:00<br />
@@ -296,15 +298,6 @@ font in use: Poppins, PicNic, and Inclusive Sans
             <br />
             <h3>聯繫</h3>
             <p>hooroo@double-grass.com</p>
-
-            <h3>
-              <a
-                href="localapplication.html"
-                class="application-button"
-                rel="history"
-                >本地申請</a
-              >
-            </h3>
           </div>
           <hr class="mobileline" />
           <div class="mobiledirection" id="en"></div>
@@ -345,7 +338,9 @@ font in use: Poppins, PicNic, and Inclusive Sans
             <br />
             <h3>Deadline</h3>
             <p>
-              Deadline to Apply: <i>June 15, 2025 (Sun) 24:00</i><br />
+              <span class="deadline-highlight"
+                >Deadline to Apply: <i>June 15, 2025 (Sun) 24:00</i><br
+              /></span>
               Acceptance Notices: <i>June 30, 2025 (Mon) 12:00</i><br />
               &nbsp;&nbsp;&nbsp; &bull; Successful applicants complete the
               payment by <i>July 13 (Sun) 24:00</i><br />
@@ -426,14 +421,6 @@ font in use: Poppins, PicNic, and Inclusive Sans
             <br />
             <h3>Contact</h3>
             <p>hooroo@double-grass.com</p>
-            <h3>
-              <a
-                href="overseaapplication.html"
-                class="application-button"
-                rel="history"
-                >Overseas Booth Application</a
-              >
-            </h3>
           </div>
         </div>
       </div>
