feat: update banner content to reflect the closure of the OPEN CALL and encourage social media engagement

--- a/index.html
+++ b/index.html
@@ -155,24 +155,44 @@ font in use: Poppins, PicNic, and Inclusive Sans
     <div class="banner">
       <div class="banner-track">
         <div class="banner-content">
-          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
-          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
-          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
-          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
-          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
-          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
-          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
-          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
+          <span class="dot"></span> Taipei Art Book Fair 2025
+          草率季徵件已截止！OPEN CALL is now closed — thanks to everyone who
+          applied!
+          <span class="dot" style="background-color: blueviolet"></span>
+          請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
+          for the latest updates about the fair.
+          <span class="dot"></span> Taipei Art Book Fair 2025
+          草率季徵件已截止！OPEN CALL is now closed — thanks to everyone who
+          applied!
+          <span class="dot" style="background-color: blueviolet"></span>
+          請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
+          for the latest updates about the fair.
         </div>
         <div class="banner-content">
-          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
-          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
-          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
-          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
-          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
-          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
-          <span class="dot"></span> 2025 草率季-台北藝術書展 Taipei Art Book
-          Fair Soft POW 無限柔軟 OPEN CALL 5/5-6/15
+          <span class="dot"></span> Taipei Art Book Fair 2025
+          草率季徵件已截止！OPEN CALL is now closed — thanks to everyone who
+          applied!
+          <span class="dot" style="background-color: blueviolet"></span>
+          請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
+          for the latest updates about the fair.
+          <span class="dot"></span> Taipei Art Book Fair 2025
+          草率季徵件已截止！OPEN CALL is now closed — thanks to everyone who
+          applied!
+          <span class="dot" style="background-color: blueviolet"></span>
+          請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
+          for the latest updates about the fair.
+          <span class="dot"></span> Taipei Art Book Fair 2025
+          草率季徵件已截止！OPEN CALL is now closed — thanks to everyone who
+          applied!
+          <span class="dot" style="background-color: blueviolet"></span>
+          請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
+          for the latest updates about the fair.
+          <span class="dot"></span> Taipei Art Book Fair 2025
+          草率季徵件已截止！OPEN CALL is now closed — thanks to everyone who
+          applied!
+          <span class="dot" style="background-color: blueviolet"></span>
+          請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
+          for the latest updates about the fair.
         </div>
       </div>
     </div>
