fix: comment out overseas application link in local application form

--- a/localapplicationinvite.html
+++ b/localapplicationinvite.html
@@ -108,9 +108,9 @@
       <div style="font-size: 1rem; text-align: center; font-weight: 600">
         本地申請<br />TAIPEI ART BOOK FAIR OPEN CALL
       </div>
-      <div style="font-size: 0.7rem; text-align: center; font-weight: 600">
+      <!-- <div style="font-size: 0.7rem; text-align: center; font-weight: 600">
         海外申請請移駕至 → <a href="overseaapplication.html">Oversea Panel</a>
-      </div>
+      </div> -->
       <br /><br />
       <span class="description-header">Exhibitor's Name</span>
       <div class="module-form layout-form-columnized">
