--- a/overseaapplicationinvite.html
+++ b/overseaapplicationinvite.html
@@ -104,10 +104,10 @@
       <div style="font-size: 1rem; text-align: center; font-weight: 600">
         Oversea Application<br />TAIPEI ART BOOK FAIR OPEN CALL
       </div>
-      <div style="font-size: 0.7rem; text-align: center; font-weight: 600">
+      <!-- <div style="font-size: 0.7rem; text-align: center; font-weight: 600">
         For local application →
         <a href="localapplication.html">本地申請</a>
-      </div>
+      </div> -->
       <br /><br />
       <span class="description-header">Exhibitor's Name</span>
       <div class="module-form layout-form-columnized">
